feat(api): add boosters endpoint
